@@ -710,3 +710,4 @@ EXPORTS
     sha224_one_block_sse_shani                  @684
     sha256_sse_shani                            @685
     sha256_one_block_sse_shani                  @686
+    imb_quic_chacha20_poly1305			@687
