@@ -1,6 +1,12 @@
 ========================================================================
 Release Notes for Intel(R) Multi-Buffer Crypto for IPsec Library
 
+Unreleased
+=======================================================================
+
+Library
+- QUIC CHACHA20-POLY1305 API added.
+
 v1.4 June 2023
 ========================================================================
 
@@ -12,7 +18,7 @@ Library
 - Optimized GHASH component in AVX512 VAES (type2) AES-GCM implementation.
 - Implemented a workaround for false load-block condition in SSE and AVX2 AES-GCM implementations.
 - Removed AVX AES-GCM implementation, its API symbols map to the SSE implementation.
-- QUIC header protection API added.
+- QUIC AES-ECB header protection API added.
 - QUIC AES-GCM-128/256 AEAD API added.
 - Removed v0.53 (and older) compatibility symbol mapping (NO_COMPAT_IMB_API_053 not defined).
 - ZUC AVX2-GFNI implementation added.
